Closed Bug 1616132 Opened 4 years ago Closed 4 years ago

getProgramParameter(ATTACHED_SHADERS) always returns 2

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Webcompat Priority P2
Tracking Status
firefox-esr68 --- unaffected
firefox73 --- unaffected
firefox74 + fixed
firefox75 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

(Keywords: regression)

Attachments

(1 file)

There are always two valid slots, but we need to check the slot contents for non-nulls.

See Also: → 1615814

It was always returning 2.

Severity: normal → critical
Status: NEW → ASSIGNED

[Tracking Requested - why for this release]: This fixes YouTube 360 videos.

Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c906f7b0f8dc
ATTACHED_SHADERS must count non-null slots. r=lsalzman
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Webcompat Priority: --- → P2

Comment on attachment 9127154 [details]
Bug 1616132 - ATTACHED_SHADERS must count non-null slots.

Beta/Release Uplift Approval Request

  • User impact if declined: YouTube 360 video broken in Firefox
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Really simple fix, and we're adding tests for it so we don't regress again.
  • String changes made/needed: none
Attachment #9127154 - Flags: approval-mozilla-beta?

Comment on attachment 9127154 [details]
Bug 1616132 - ATTACHED_SHADERS must count non-null slots.

Fixes a webgl regression causing real-world site issues. Approved for 74.0b5.

Attachment #9127154 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Bugbug thinks this bug is a regression, but please revert this change in case of error.

Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: