Bug 1616132 - ATTACHED_SHADERS must count non-null slots. r=lsalzman, a=RyanVM

It was always returning 2.

Differential Revision: https://phabricator.services.mozilla.com/D63110