dom/canvas/ClientWebGLContext.cpp
@@ -4912,8 +4912,16 @@ void ClientWebGLContext::GetProgramParameter(
         return JS::BooleanValue(!prog.mKeepAlive);
       case LOCAL_GL_VALIDATE_STATUS:
         return JS::BooleanValue(prog.mLastValidate);
-      case LOCAL_GL_ATTACHED_SHADERS:
-        return JS::NumberValue(prog.mNextLink_Shaders.size());
+      case LOCAL_GL_ATTACHED_SHADERS: {
+        size_t shaders = 0;
+        for (const auto& pair : prog.mNextLink_Shaders) {
+          const auto& slot = pair.second;
+          if (slot.shader) {
+            shaders += 1;
+          }
+        }
+        return JS::NumberValue(shaders);
+      }
       default:
         break;
     }
